# EGMOF

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements_clean.txt  requirements_current.txt
config/: desc2mof_training_config.yaml  mof2desc_training_config.yaml  prop2desc_model_config.yaml  prop2desc_training_config.yaml
config/h2uptake/: 1000.yaml  10000.yaml  18463.yaml  2200.yaml  5000.yaml
config/various_dataset/: 1bar.yaml  Ar_uptake.yaml  CarbonDioxide_298_0.5.yaml  CarbonDioxide_298_2.5.yaml  Hydrogen_77_100.0.yaml  Hydrogen_77_2.0.yaml  Krypton_273_1.0.yaml  Krypton_273_10.0.yaml  Krypton_273_5.0.yaml  Methane_298_0.5.yaml  Methane_298_0.9.yaml  Methane_298_2.5.yaml  Methane_298_35.0.yaml  Methane_298_4.5.yaml  N2diffusivity_dilute_log.yaml  N2uptake.yaml  Nitrogen_298_0.9.yaml  O2diffusivity_dilute_log.yaml  O2uptake.yaml  Xenon_273_1.0.yaml  Xenon_273_10.0.yaml  Xenon_273_5.0.yaml  bandgap.yaml  cbm.yaml  density.yaml  diffusivity_log.yaml  henry_co2.yaml  tsr.yaml  vbm.yaml
src/egmof/: __init__.py  constants.py  egmof.py  egmof_backup.py  generate.py  train.py  utils.py
src/egmof/builder/: README.md  __init__.py  build_MOFs.py  make_bbs.py  selfies2bb.py
src/egmof/data/: __init__.py  datamodule.py  dataset.py  descriptor_name.json
src/egmof/desc2mof/: __init__.py  dataset.py  model.py  predict.py  preprocessing.py  pretrain.py  utils.py
src/egmof/descriptors/: README.md  get_all_descriptors.py
src/egmof/mof2desc/: __init__.py
src/egmof/prop2desc/: __init__.py  model.py  scheduler.py  train.py  unet.py  (+1 more)
(+167 files in other folders)
