[project]
name = "egmof"
version = "0.1.0"
description = "efficient generative model for meetal-organic frameworks (MOFs)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.28.0",
    "einops>=0.8.2",
    "joblib",
    "lightning>=2.6.1",
    "molSimplify>=0.3.0",
    "numpy<2",
    "omegaconf>=2.3.0",
    "pandas>=2.0,<3.0",
    "pormake>=0.2.2",
    "rdkit>=2023.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selfies>=2.2.0",
    "timm>=1.0.25",
    "transformers>=4.30.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
